# shakki-tekoaly

./: .coveragerc  .gitignore  .pylintignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: Feature_Toggle_Löydöt.md  Käyttöohje.md  Määrittelydokumentti.md  Testausdokumentti.md  Toteutusdokumentti.md  Viikkoraportti5.md  demo-testaus-fen.md  määrittelydokumentti.md  toteutusraportti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md  viikkoraportti7.md  viikkoraportti8.md
src/: __init__.py  board.py  evaluation.py  moves.py  profile.py  profiling.py  search.py  smart_ai.py  stupid_ai.py
src/tests/: test_board.py  test_evaluation.py  test_moves.py  test_search.py  test_transposition.py
tests/: test_moves.py
