[tool.poetry]
name = "stupid-chess-ai"
version = "0.1.0"
description = "Chess AI using negamax search with alpha-beta pruning"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
coverage = "^7.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
addopts = "-v"
