[tool.poetry]
name = "stupid-chess-ai"
version = "0.1.0"
description = "Chess AI using negamax search with alpha-beta pruning"
authors = ["Joona Pietarinen <joona@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
coverage = "^7.13.1"
pytest-cov = "^7.0.0"
pylint = "^4.0.5"
autopep8 = "^2.3.2"

[tool.poetry.scripts]
lint = "pylint:run_pylint"
lint-all = "pylint src --rcfile=.pylintrc"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
addopts = "-v"
